z-index walpapers fixed

--- a/src/sass/components/molecules/profile-block/_variables.scss
+++ b/src/sass/components/molecules/profile-block/_variables.scss
@@ -9,7 +9,7 @@ $profile-block-sizes: (
  cover-photo-icon-cell-z-index:10,
 
  cover-min-height:calculateRem(90px),
- cover-z-index:100,
+ cover-z-index: 1,
 
  profile-block-cover-photo-icon-cell-z-index:30,
 
